[package]
#SBP-M1 review: use " for consistency
name = 'functionland-fula'
version = "0.1.0"
#SBP-M1 review: authors appears to be invalid
authors = ["SugarFunge Developers"]
edition = "2021"
#SBP-M1 review: ensure that licenses satisfy the requirements of all dependencies
license = "Proprietary"
#SBP-M1 review: missing description
#SBP-M1 review: missing repository

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
libm ={ version = "0.2.6",  default-features = false }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }

fula-pool = { git = "https://github.com/MauricinhoMorales/fula-pool", branch = "main", default-features = false }
sugarfunge-asset = { git = "https://github.com/SugarFunge/sugarfunge-asset", branch = "main", default-features = false }
sugarfunge-primitives = { git = "https://github.com/SugarFunge/sugarfunge-primitives", branch = "main", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ['std']
std = [
	'codec/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
	'sugarfunge-asset/std',
	"sugarfunge-primitives/std",
	"pallet-balances/std"

]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
